syntax="proto3";
package services;
option go_package = "./proto/user;user";

//protoc --micro_out=./proto/user --go_out=./proto/user proto/user.proto

message UserLoginRequest {
  string username = 1;
  string password = 2;
  optional int32 expiry = 3;
}

message UserLoginResponse {
  string jwt_token = 1;
  int32 reason = 2;
  int32 expiry = 3;
}


message UserRegisterRequest {
  string username = 1;
  string password = 2 ;
  string password_confirm = 3;
}

service UserService {
  rpc UserLogin(UserLoginRequest) returns (UserLoginResponse){}
  rpc UserRegister(UserRegisterRequest) returns (UserLoginResponse){}
}